# DeepSleepNet

./: .gitignore  AGENTS.md  README.md  experiment_log_template.md  main.py  plan.md  pyproject.toml
configs/: base_experiment.yaml  base_experiment_full.yaml  paper_sleep_edf_fpz_cz.yaml  paper_sleep_edf_fpz_cz_eeg_eog.yaml  paper_sleep_edf_fpz_cz_eeg_eog_gated_fusion_p05.yaml  paper_sleep_edf_fpz_cz_eeg_eog_quality_generator_p05.yaml  paper_sleep_edf_fpz_cz_eeg_eog_quality_generator_v2_p05.yaml  paper_sleep_edf_fpz_cz_eeg_eog_quality_generator_v3_p05.yaml  paper_sleep_edf_fpz_cz_v2.yaml
conversation/: README.txt  conversation_2026-04-10_to_2026-04-14_summary.txt  conversation_2026-04-16.txt  conversation_2026-04-17.txt  conversation_2026-04-21.txt  conversation_2026-04-22.txt  conversation_2026-04-29.txt  conversation_2026-05-13.txt  conversation_2026-05-15.txt
docs/: deepSleep.md  deepsleepnet_paper_cv20_results.md  deepsleepnet_repro_plan.md  eog_dropout_robustness_proposal.md  paper_experiment_insights_2026-05-15.md  plan.md  repro_code_reading_guide.md  research_progress_2026-04-29.md  research_progress_2026-05-07.md  research_progress_2026-05-13.md  research_progress_2026-05-14.md  research_progress_2026-05-15.md
paper/: DeepSleepNet_2017.txt  recent_sleep_papers_summary.md
scripts/: check_single_dual_alignment.py  package_eval_tests.sh  plot_cv20_comparison.py  plot_dropout_macro_f1_ppt.py  plot_eeg_eog_robustness_results.py  plot_eog_missing_decline_ppt.py  plot_quality_generator_v2_architecture.py  plot_quality_generator_v2_architecture_simple.py  (+10 more)
(+18 files in other folders)
